<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="126dp"
            android:layout_height="130dp"
            android:layout_marginBottom="-5dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/labuddy_logo"
            app:tint="#1A3E6D"
            app:tintMode="src_in" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#1A3E6D"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/motto"
        android:textColor="#757575" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/round_input"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#9E9E9E" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="12dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/round_input"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="45dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_round"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSignUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_footer3"
        android:textColor="#1A3E6D" />

    <View
        android:layout_width="4dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        tools:ignore="InefficientWeight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/text2"
        android:textColor="#9E9E9E" />

    <ImageButton
        android:id="@+id/btnGoogleLogin"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_input"
        android:contentDescription="@string/btn_google"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_google" />

</LinearLayout>